feat(static-site): improve content of the site and documentation

--- a/assets/static/index.html
+++ b/assets/static/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProcessGrid - Static Content Test</title>
+    <title>AWS Demo Environment - Static Content Test</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>ProcessGrid Static Content Test</h1>
+            <h1>ADE Static Content Test</h1>
             <p class="subtitle">Testing S3 static file serving</p>
         </header>
 
